# spyglasses-flask

./: .gitignore  LICENSE  makefile  requirements.txt  setup.cfg
app/: __init__.py  models.py  routes.py
spyglasses/: __init__.py  ai.py  models.py  views.py
spyglasses/api/: __init__.py  jwt.py  v1.py
spyglasses/templates/: home.html
tests/: conftest.py  pytest.ini  test_post_routes.py
tests/api/: __init__.py  conftest.py  test_note_routes.py  test_post_routes.py  test_token_routes.py  test_user_routes.py
tests/instance/: test_spyglasses.db
tests/models/: test_post_model.py
