[metadata]
name = spyglasses
version = 1.0.0
url = https://spyglass.es
license = BSD-3-Clause
maintainer = Planning for Aliens
maintainer_email = sean@planningforaliens.com
description = API for spyglass.es

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    unnittest

[tool:unnittest]
testpaths = tests

[coverage:run]
branch = True
source =
    spyglasses